# cmakeproject

./: CMakeLists.txt  README.md
source/: LiftInformation.cpp  main.cpp
